data ingestion component added

--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -405,6 +405,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cc41025e",
+   "metadata": {},
+   "source": [
+    "if so many categories are present then use - Target guided categorical encoding"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "1e290fe3",
